--- a/VariableElimination_Java/VE_pgmpy.ipynb
+++ b/VariableElimination_Java/VE_pgmpy.ipynb
@@ -28,84 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pgmpy\n",
-      "  Downloading pgmpy-0.1.24-py3-none-any.whl.metadata (6.3 kB)\n",
-      "Collecting networkx (from pgmpy)\n",
-      "  Downloading networkx-3.2.1-py3-none-any.whl.metadata (5.2 kB)\n",
-      "Requirement already satisfied: numpy in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (from pgmpy) (1.26.0)\n",
-      "Requirement already satisfied: scipy in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (from pgmpy) (1.11.3)\n",
-      "Requirement already satisfied: scikit-learn in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (from pgmpy) (1.3.0)\n",
-      "Requirement already satisfied: pandas in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (from pgmpy) (2.1.1)\n",
-      "Requirement already satisfied: pyparsing in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (from pgmpy) (3.0.9)\n",
-      "INFO: pip is looking at multiple versions of pgmpy to determine which version is compatible with other requirements. This could take a while.\n",
-      "Collecting pgmpy\n",
-      "  Downloading pgmpy-0.1.23-py3-none-any.whl.metadata (6.3 kB)\n",
-      "  Downloading pgmpy-0.1.22-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "      --------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "      --------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     --------------- ------------------------ 0.7/1.9 MB 5.8 MB/s eta 0:00:01\n",
-      "     ------------------------------------ --- 1.8/1.9 MB 9.3 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 9.5 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.21-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 33.4 MB/s eta 0:00:01\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 33.4 MB/s eta 0:00:01\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 33.4 MB/s eta 0:00:01\n",
-      "     ------------------------------ --------- 1.5/1.9 MB 8.4 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  1.9/1.9 MB 10.1 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 7.7 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.20-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 64.6 MB/s eta 0:00:01\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 64.6 MB/s eta 0:00:01\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 64.6 MB/s eta 0:00:01\n",
-      "     ------------------------- -------------- 1.2/1.9 MB 7.0 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  1.9/1.9 MB 9.4 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 7.2 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.19-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     ---------------------------------------  1.9/1.9 MB 40.5 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 24.5 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.18-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     --------------------- ------------------ 1.0/1.9 MB 68.9 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 24.5 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.17-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     ------------------------------------- -- 1.8/1.9 MB 56.6 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 40.7 MB/s eta 0:00:00\n",
-      "INFO: pip is still looking at multiple versions of pgmpy to determine which version is compatible with other requirements. This could take a while.\n",
-      "  Downloading pgmpy-0.1.16-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     ------------------------ --------------- 1.2/1.9 MB 25.3 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 24.2 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.15-py3-none-any.whl (1.9 MB)\n",
-      "     ---------------------------------------- 0.0/1.9 MB ? eta -:--:--\n",
-      "     ---------------------- ----------------- 1.0/1.9 MB 68.9 MB/s eta 0:00:01\n",
-      "     ---------------------------------------  1.9/1.9 MB 30.2 MB/s eta 0:00:01\n",
-      "     ---------------------------------------- 1.9/1.9 MB 20.2 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.14-py3-none-any.whl (331 kB)\n",
-      "     ---------------------------------------- 0.0/331.5 kB ? eta -:--:--\n",
-      "     ------------------------------------- 331.5/331.5 kB 20.1 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.13-py3-none-any.whl (324 kB)\n",
-      "     ---------------------------------------- 0.0/324.5 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 324.5/324.5 kB ? eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.12-py3-none-any.whl (322 kB)\n",
-      "     ---------------------------------------- 0.0/323.0 kB ? eta -:--:--\n",
-      "     ---------------------------------------- 323.0/323.0 kB ? eta 0:00:00\n",
-      "INFO: This is taking longer than usual. You might need to provide the dependency resolver with stricter constraints to reduce runtime. See https://pip.pypa.io/warnings/backtracking for guidance. If you want to abort this run, press Ctrl + C.\n",
-      "  Downloading pgmpy-0.1.11-py3-none-any.whl (314 kB)\n",
-      "     ---------------------------------------- 0.0/314.7 kB ? eta -:--:--\n",
-      "     ------------------------------------- 314.7/314.7 kB 19.0 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.10-py3-none-any.whl (339 kB)\n",
-      "     ---------------------------------------- 0.0/339.4 kB ? eta -:--:--\n",
-      "     ------------------------------------- 339.4/339.4 kB 21.9 MB/s eta 0:00:00\n",
-      "  Downloading pgmpy-0.1.9-py3-none-any.whl (331 kB)\n",
-      "     ---------------------------------------- 0.0/331.7 kB ? eta -:--:--\n",
-      "     ------------------------------------- 331.7/331.7 kB 20.1 MB/s eta 0:00:00\n",
-      "Installing collected packages: pgmpy\n",
-      "Successfully installed pgmpy-0.1.9\n"
+      "Requirement already satisfied: pgmpy in c:\\users\\amand\\anaconda3\\envs\\myenv\\lib\\site-packages (0.1.9)\n"
      ]
     }
    ],
@@ -116,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -132,7 +55,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\amand\\Downloads\\VE_pgmpy.ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Downloads/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Downloads/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/amand/Downloads/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m BayesianNetwork\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Downloads/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfactors\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdiscrete\u001b[39;00m \u001b[39mimport\u001b[39;00m TabularCPD\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Downloads/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minference\u001b[39;00m \u001b[39mimport\u001b[39;00m VariableElimination\n",
+      "\u001b[1;32mc:\\Users\\amand\\Documents\\GitHub\\ai-principles-techniques\\VariableElimination_Java\\VE_pgmpy.ipynb Cell 3\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Documents/GitHub/ai-principles-techniques/VariableElimination_Java/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Documents/GitHub/ai-principles-techniques/VariableElimination_Java/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/amand/Documents/GitHub/ai-principles-techniques/VariableElimination_Java/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodels\u001b[39;00m \u001b[39mimport\u001b[39;00m BayesianNetwork\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Documents/GitHub/ai-principles-techniques/VariableElimination_Java/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mfactors\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdiscrete\u001b[39;00m \u001b[39mimport\u001b[39;00m TabularCPD\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/amand/Documents/GitHub/ai-principles-techniques/VariableElimination_Java/VE_pgmpy.ipynb#W2sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpgmpy\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39minference\u001b[39;00m \u001b[39mimport\u001b[39;00m VariableElimination\n",
       "File \u001b[1;32mc:\\Users\\amand\\anaconda3\\envs\\myenv\\Lib\\site-packages\\pgmpy\\__init__.py:1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39m.\u001b[39;00m\u001b[39mglobal_vars\u001b[39;00m \u001b[39mimport\u001b[39;00m HAS_PANDAS, device\n\u001b[0;32m      3\u001b[0m __all__ \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mHAS_PANDAS\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mdevice\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[0;32m      4\u001b[0m __version__ \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mv0.1.9\u001b[39m\u001b[39m\"\u001b[39m\n",
       "File \u001b[1;32mc:\\Users\\amand\\anaconda3\\envs\\myenv\\Lib\\site-packages\\pgmpy\\global_vars.py:3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# TODO: This variables being set in this file should move to setup.py\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtorch\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[39m# This module initializes flags for optional dependencies\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[39mtry\u001b[39;00m:\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'torch'"
